log/build_2022-11-30_18-51-51/fastslam/stdout_stderr.log
running egg_info
writing ../../../../build/fastslam/fastslam.egg-info/PKG-INFO
writing dependency_links to ../../../../build/fastslam/fastslam.egg-info/dependency_links.txt
writing entry points to ../../../../build/fastslam/fastslam.egg-info/entry_points.txt
writing requirements to ../../../../build/fastslam/fastslam.egg-info/requires.txt
writing top-level names to ../../../../build/fastslam/fastslam.egg-info/top_level.txt
reading manifest file '../../../../build/fastslam/fastslam.egg-info/SOURCES.txt'
writing manifest file '../../../../build/fastslam/fastslam.egg-info/SOURCES.txt'
running build
running build_py
copying fastslam/input.py -> /home/alan/FS-AI/build/fastslam/build/lib/fastslam
running install
running install_lib
copying /home/alan/FS-AI/build/fastslam/build/lib/fastslam/input.py -> /home/alan/FS-AI/install/fastslam/lib/python3.8/site-packages/fastslam
byte-compiling /home/alan/FS-AI/install/fastslam/lib/python3.8/site-packages/fastslam/input.py to input.cpython-38.pyc
  File "/home/alan/FS-AI/install/fastslam/lib/python3.8/site-packages/fastslam/input.py", line 4
    from /home/alan/FS-AI/src/3_slam/src/fastslam/fastslam/algorithm import *
         ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/alan/FS-AI/install/fastslam/lib/python3.8/site-packages/fastslam-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../../../build/fastslam/fastslam.egg-info to /home/alan/FS-AI/install/fastslam/lib/python3.8/site-packages/fastslam-0.0.0-py3.8.egg-info
running install_scripts
Installing fastslam script to /home/alan/FS-AI/install/fastslam/lib/fastslam
writing list of installed files to '/home/alan/FS-AI/build/fastslam/install.log'
